address text contrast issue
Coding work currently taking back seat to sock knitting competition.

--- a/fiftytwo/makeasim/src/sass/abstracts/Variables.scss
+++ b/fiftytwo/makeasim/src/sass/abstracts/Variables.scss
@@ -1,5 +1,5 @@
 $color-text: #0054D3;
 $color-background: #5CCAFF;
 $color-rose: #844653;
-$color-green: #6dbd27;
+$color-green: #298726;
 $color-white: #F7F5F7;
